--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     -->
 		<title>Stundenplan @ BGPD</title>
 	</head>
-	<body>
+	<body data-day-view="false">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		<!--
