--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
     -->
 		<title>Stundenplan @ BGPD</title>
 	</head>
-	<body data-day-view="false">
+	<body data-day-view="false" class="bg-gray-200 dark:bg-slate-900">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		<!--
