--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8" />
 		<!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
+		<meta name="theme-color" content="#d1d5db" />
+		<meta name="theme-color" content="#334155" media="(prefers-color-scheme: dark)" />
 		<meta name="description" content="(Lehrer/Raum/Schüler)-Stundenplan für das BG/BRG Perchtoldsdorf" />
 		<link rel="apple-touch-icon" href="https://bgperchtoldsdorf.at/apple-touch-icon.png" />
 		<!--
