--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,8 @@
 		<meta name="theme-color" content="#334155" media="(prefers-color-scheme: dark)" />
 		<meta name="theme-color" content="#d1d5db" />
 		<meta name="description" content="(Lehrer/Raum/Schüler)-Stundenplan für das BG/BRG Perchtoldsdorf" />
-		<link rel="apple-touch-icon" href="https://bgperchtoldsdorf.at/apple-touch-icon.png" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
