--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Stundenplan @ BGPD</title>
+		<title>Untis+ @ BGPD</title>
 	</head>
 	<body data-day-view="false" class="bg-gray-200 dark:bg-slate-900">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
